fix: Pagination component alignment

--- a/src/components/SearchResult/Pagination/Pagination.module.scss
+++ b/src/components/SearchResult/Pagination/Pagination.module.scss
@@ -1,14 +1,20 @@
 @import "styles/variables";
 
 .pagination {
-  display: flex;
-  justify-content: space-around;
+  align-self: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
   margin-top: 2rem;
 
   .page {
     @include label-small;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @include screen_md {
       @include label-medium;
